# MiRNA-Toolkit

./: .gitignore  Dockerfile  README.md  RELEASE.md  Singularity.def  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: overview.md  usage.html
notebooks/: quickstart.ipynb
src/mirna_toolkit/: __init__.py  batch.py  cli.py  pipeline.py
src/mirna_toolkit/alignment/: __init__.py  bowtie.py  hisat2.py  star.py
src/mirna_toolkit/disease/: __init__.py  hmdd.py  mircancer.py
src/mirna_toolkit/io/: __init__.py  bam.py  downloaders.py  fastq.py  gtf.py
src/mirna_toolkit/ml/: __init__.py  classifiers.py  explainability.py  preprocessing.py
src/mirna_toolkit/prediction/: __init__.py  confidence.py  mirecords_api.py  mirtarbase_api.py  rnahybrid.py  seed_match.py  targetscan_api.py
src/mirna_toolkit/quantification/: __init__.py  counts.py  normalization.py  novel.py
src/mirna_toolkit/utils/: __init__.py  config.py  http.py  logging.py  plugins.py  versioning.py
src/mirna_toolkit/visualization/: __init__.py  heatmaps.py  networks.py  pathway.py  volcano.py
tests/: test_batch.py  test_cli.py  test_external_wrappers.py  test_http_utils.py  test_normalization.py  test_novel.py  test_pipeline.py  test_plugins.py  test_prediction.py  test_versioning.py
